--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Unit 3, Part 3</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <script src="scripts/part-supply.js" charset="utf-8"></script>
   </head>
   <body>
@@ -12,6 +12,10 @@
       <h2>Check the console...</h2>
     </header>
     <!-- create an ordered list with any questions you have on this week's material -->
-
+    <ol>
+      <li>
+        <p></p>
+      </li>
+    </ol>
   </body>
 </html>
